--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (username.github.io) then use these settings:
-url: "http://esola.co"
+# url: "http://esola.co"
+url: "http://yyoshiki41.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -72,7 +73,7 @@ url-pretty: "esola.co"  # eg. "deanattali.com/beautiful-jekyll"
 timezone: "Asia/Tokyo"
 markdown: kramdown
 highlighter: pygments
-permalink: /posts/:title
+permalink: /posts/:year/:title
 paginate: 3
 
 # Default YAML values (more information on Jekyll's site)
