--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ author:
   github: yyoshiki41    # eg. daattali
   twitter: yyoshiki41   # eg. daattali
   linkedin: "/in/yyoshiki41"  # eg. "pub/dean-attali/8/946/143"
-  stackoverflow: "http://stackoverflow.com/users/5029207/yoshiki-nakagawa"  # eg. "3943160/daattali"
+  stackoverflow: "5029207/yoshiki-nakagawa"  # eg. "3943160/daattali"
  
 # Select which links to show in the footer
 footer-links-active:
@@ -74,7 +74,7 @@ timezone: "Asia/Tokyo"
 markdown: kramdown
 highlighter: pygments
 permalink: /posts/:year/:title
-paginate: 3
+paginate: 4
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
