--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ url-pretty: "esola.co"  # eg. "deanattali.com/beautiful-jekyll"
 # --- Misc --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-#disqus: ""
+disqus: "esola"
 
 # Fill in your Google Analytics ID to track your website using GA
 google_analytics: "UA-55191126-1"
